<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSecondActivity"
    android:orientation="vertical"
    android:paddingTop="104dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/unionback"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="normal"
        android:textSize="36sp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:background="@drawable/rectangle_2boarderr"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonsignup"
        android:layout_marginTop="4dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/by_signing_up_you_agree_to_photo_s_terms_of_service_and_privacy_policy"/>

</LinearLayout>