<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="104dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".LogInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/unionback"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textStyle="normal"
        android:textSize="36sp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/e_mail"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rectangle_2boarderr"
        tools:ignore="RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_2boarderr"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonlogin__1_"
        android:layout_marginTop="4dp"/>


</LinearLayout>